# sentclass

./: README.md  pyproject.toml
src/: sentclass.py
